tests/paczka1/small_fuzzy/49804089.err
Error in line 6: JTA944rU8 S717 33,5
Error in line 11: XNWC A487 82,7
